#missing (fixed) Interpretation: checkbox alignement on Firefox Ubuntu

--- a/webapp/app/javascript/app/interpretations/main.scss
+++ b/webapp/app/javascript/app/interpretations/main.scss
@@ -65,7 +65,7 @@
       right: .25em;
     }
     input[type="checkbox"]{
-      vertical-align: middle;
+      vertical-align: bottom;
     }
     label{
       line-height: 1em;
